--- a/app/src/main/res/layout/activity_swiconfig.xml
+++ b/app/src/main/res/layout/activity_swiconfig.xml
@@ -46,4 +46,12 @@
             android:layout_height="wrap_content"
             android:text="CANCEL" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
+    <Button
+        android:id="@+id/swi_assign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ASSIGN FUNCTIONS" />
 </LinearLayout>
